changed the prove consistency endpoint to provide log_lengths instead of log_roots
